add hide and show image button in tile component

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,8 +4,7 @@
 
 <ul>
   {{#each model as |blog|}}
-  <li>{{blog.heading}}</li>
-  <!-- {{blog-tile blog=blog}} -->
+    {{blog-tile blog=blog}}
   {{/each}}
 </ul>
 
