add delete and update component

--- a/app/templates/components/blog-tile.hbs
+++ b/app/templates/components/blog-tile.hbs
@@ -6,5 +6,6 @@
   {{else}}
      <button {{action 'imageShow'}}>Show image</button>
   {{/if}}
+   {{update-blog blog=blog update="update"}}
+  <button {{action 'delete' blog}}>Delete Post</button>
 </li>
- 
