--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,8 @@
 <h1> Hi! Kon'nichiwa! Welcome to my blog!</h1>
 
-
-
 <ul>
   {{#each model as |blog|}}
-    {{blog-tile blog=blog update="update" destroyBlog="destroyBlog"}}
+    {{blog-tile blog=blog}}
   {{/each}}
 </ul>
 
