--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,6 +1,6 @@
-<p>"Our Blog" Representatives would love to help you choose a destination or answer any burning questions you may have.</p>
+<p>I would love to help you answer any burning questions you may have.</p>
 
-<p>Contact us today!</p>
+<p>Contact me today!</p>
 
 <p>
   Our Blog <br>
