--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <h1> Hi! Kon'nichiwa! Welcome to my blog!</h1>
 
-<ul>
+<ul class="list-group">
   {{#each model as |blog|}}
     {{blog-tile blog=blog}}
   {{/each}}
