--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,7 +14,7 @@
   </nav>
 
   <header class= "jumbotron">
-    <h1>Blog</h1>
+    <h1>My journey in beautiful Japan</h1>
   </header>
     {{outlet}}
   <hr>
