--- a/app/templates/components/new-blog.hbs
+++ b/app/templates/components/new-blog.hbs
@@ -32,5 +32,5 @@
       </div>
 
 {{else}}
-  <button {{action 'blogFormShow'}}>New Blog</button>
+  <button {{action 'blogFormShow'}}>New Post</button>
 {{/if}}
