--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,15 @@
 <h1> Hi! Kon'nichiwa! Welcome to my blog!</h1>
 
 <ul class="list-group">
-  {{#each model as |blog|}}
+  {{#each model.blogs as |blog|}}
     {{blog-tile blog=blog}}
   {{/each}}
 </ul>
 
 {{new-blog saveBlog2="saveBlog3"}}
+
+
+
 
 {{#link-to 'about'}}About{{/link-to}}
 {{#link-to 'contact'}}Click here to contact us.{{/link-to}}
