tag display fixed

--- a/app/templates/components/blog-detail.hbs
+++ b/app/templates/components/blog-detail.hbs
@@ -3,7 +3,7 @@
 <br>
 {{blog.date}} <h3>{{blog.heading}}</h3><br>
 <img src={{blog.image}} alt={{blog.heading}} width=600px ><br>
-{{blog.tag}}<br>
+<p class="tag">{{blog.tag}}</p><br>
 {{blog.content}}
 
 <h2> Comments </h2>
